Issue #84: Code cleanup with built-in feature in IDE